# glimmer-cism-glimmer-doc

./: ChangeLog  INSTALL  Makefile.am  NEWS  README  bootstrap  configure.in
doc/: Makefile.am  glimmer.bib  glimmer.tex.in  make_doc.rules
doc/common/: definitions.tex  packages.tex  version.tex.in
doc/dg/: dg.tex
doc/dg/figures/: Makefile.am  class_diagram.dia  class_diagram_glint.dia
doc/num/: grid.tex  num.tex  temp_solver.tex
doc/tg/: Makefile.am  installation.tex  non_graphical.tex  plotcfdiff.tex  plotcfstats.tex  plotcfvar.tex  plotextent.tex  plotprofile.tex  plotprofilets.tex  plotspot.tex  plotstreams.tex  plotting.tex  rsl.tex.in  tg.tex
doc/tg/figures/: Makefile.am
doc/tut/: gex.tex  glint.tex  gtest.tex  intro.tex
doc/ug/: Makefile.am  config_files.tex  drivers.tex  glide.tex  glint.tex  glint_api.tex  installation.tex  intro.tex  mbals.tex  restarts.tex  ug.tex  varlist.tex
doc/ug/figs/: glimmer.dia
